starting with sample

--- a/.gitattributes
+++ b/.gitattributes
@@ -2490,6 +2490,18 @@ samples/2d-tests/cylindrical_gdisk/run.in -text
 samples/2d-tests/cylindrical_gdisk/src/Makefile.local -text
 samples/2d-tests/cylindrical_gdisk/src/cparam.local -text
 samples/2d-tests/cylindrical_gdisk/start.in -text
+samples/2d-tests/dark-matter/NEVERLOCK -text
+samples/2d-tests/dark-matter/idl/pvar.pro -text
+samples/2d-tests/dark-matter/print.in -text
+samples/2d-tests/dark-matter/run.in -text
+samples/2d-tests/dark-matter/src/.build-history -text
+samples/2d-tests/dark-matter/src/.buildinfo -text
+samples/2d-tests/dark-matter/src/.buildtime -text
+samples/2d-tests/dark-matter/src/.current-precision -text
+samples/2d-tests/dark-matter/src/Makefile.local -text
+samples/2d-tests/dark-matter/src/cparam.local -text
+samples/2d-tests/dark-matter/start.in -text
+samples/2d-tests/dark-matter/video.in -text
 samples/2d-tests/debris-photoeletric-2d/print.in -text
 samples/2d-tests/debris-photoeletric-2d/reference.out -text
 samples/2d-tests/debris-photoeletric-2d/run.in -text
