--- a/.gitignore
+++ b/.gitignore
@@ -484,3 +484,36 @@ doc/readthedocs/code
 !utils/cronjobs/.pc_build_history
 !utils/cronjobs/.run_directories.log
 !utils/cronjobs/pc_build_tmp_*
+!samples/2d-tests/dark-matter/idl/.DS_Store
+!samples/2d-tests/dark-matter/idl/*.directory
+!samples/2d-tests/dark-matter/idl/*.pyc
+!samples/2d-tests/dark-matter/idl/*~
+!samples/2d-tests/dark-matter/idl/.*.swp
+!samples/2d-tests/dark-matter/idl/host-ID
+!samples/2d-tests/dark-matter/idl/revision.txt
+!samples/2d-tests/dark-matter/idl/*-eps-converted-to.pdf
+!samples/2d-tests/dark-matter/idl/.run_directories.log
+!samples/2d-tests/dark-matter/idl/pc_build_tmp_*
+!samples/2d-tests/dark-matter/idl/.pc_build_history
+!samples/2d-tests/dark-matter/src/.DS_Store
+!samples/2d-tests/dark-matter/src/*.directory
+!samples/2d-tests/dark-matter/src/*.pyc
+!samples/2d-tests/dark-matter/src/*~
+!samples/2d-tests/dark-matter/src/.*.swp
+!samples/2d-tests/dark-matter/src/host-ID
+!samples/2d-tests/dark-matter/src/revision.txt
+!samples/2d-tests/dark-matter/src/*-eps-converted-to.pdf
+!samples/2d-tests/dark-matter/src/.run_directories.log
+!samples/2d-tests/dark-matter/src/pc_build_tmp_*
+!samples/2d-tests/dark-matter/src/.pc_build_history
+!samples/2d-tests/dark-matter/.DS_Store
+!samples/2d-tests/dark-matter/*.directory
+!samples/2d-tests/dark-matter/*.pyc
+!samples/2d-tests/dark-matter/*~
+!samples/2d-tests/dark-matter/.*.swp
+!samples/2d-tests/dark-matter/host-ID
+!samples/2d-tests/dark-matter/revision.txt
+!samples/2d-tests/dark-matter/*-eps-converted-to.pdf
+!samples/2d-tests/dark-matter/.run_directories.log
+!samples/2d-tests/dark-matter/pc_build_tmp_*
+!samples/2d-tests/dark-matter/.pc_build_history
