From: Axel Brandenburg <brandenb@nordita.org> To: Puro Touko <touko.puro@aalto.fi> Cc: Rheinhardt Matthias <matthias.rheinhardt@aalto.fi> Bcc: Subject: Re: 1d-tests/inflationary-B-genesis and learly_set_el_pencils Reply-To: brandenb@nordita.org In-Reply-To: <d83cd6a2aac4496ebb0cf53c81e3d65a@exdb4.ug.kth.se>
Hi Touko,
Thanks for pointing this out. Yes, whenever we use currents from the
special/disp_current module, we need to set learly_set_el_pencil=T,
as we do in Schwinger/start.in and Schwinger2/start.in.
I have now uncommented your settings in start.in and revised
the reference data. I also checked that this switch would not make a
difference in backreact_infl, which also uses special/disp_current,
because there is no current being used.
Cheers, Axel

On Mon, Oct 27, 2025 at 09:59:50PM +0000, Puro Touko wrote:
> Hi Axel,
> 
> I was looking into accelerating and including the sample 1d-tests/inflationary-B-genesis to the GPU autotest.
> I have a question/proposal about one of the input parameters to get the sample working on the GPU and I am contacting you since you are marked as the maintainer of the sample.
> You surely have your hands full already, and this is not in any way urgent or massively important so please look into this whenever you have the time.
> 
> Noticed that on the GPU I get NaNs in the pencil jj_ohm and after a bit of reading of the generated GPU code it seems to be quite clear that the el pencil is being calculated after the jj_ohm pencil which causes the NaNs. This does not produce NaNs on the CPU since the pencil case seems to be initialized to zeroes for the initial iteration and then later iterations effectively take the "lagging" value from the previous iteration for the el pencil. This can be easily fixed by turning the flag learly_set_el_pencil to true which would populate the el pencil in the correct order before jj_ohm.
> 
>                 if (learly_set_el_pencil) p%el=f(l1:l2,m,n,iex:iez)
>                 do j=1,3
>                

--- a/samples/1d-tests/inflationary-B-genesis/start.in
+++ b/samples/1d-tests/inflationary-B-genesis/start.in
@@ -17,8 +17,7 @@
 /
 &magnetic_init_pars
   initaa='sinwave-phase', ampl_az=1e-18, kx_az=1.
-  !TP: this should be set to true?
-  !learly_set_el_pencil=T
+  learly_set_el_pencil=T
 /
 &special_init_pars
 /
