started with svn documentation

--- a/.gitattributes
+++ b/.gitattributes
@@ -802,6 +802,7 @@ doc/readthedocs/intro/getting_started.rst -text
 doc/readthedocs/intro/links.rst -text
 doc/readthedocs/intro/usingrst.rst -text
 doc/readthedocs/manuals/quick-guide.rst -text
+doc/readthedocs/pcdevelopment/howtosvn.rst -text
 doc/readthedocs/pics/pencils_100x45.png -text
 doc/readthedocs/pics/pencils_16x16.ico -text
 doc/readthedocs/pics/pencils_16x16.png -text
