--- a/doc/readthedocs/pencil-docker/Dockerfile
+++ b/doc/readthedocs/pencil-docker/Dockerfile
@@ -1,12 +1,12 @@
 FROM ubuntu:22.04
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt update && apt install -y gcc gfortran pip openmpi-bin libopenmpi-dev git libxrender1 x11-apps python3-tk gnudatalanguage python3-gdl vim
+RUN apt update && apt install -y gcc gfortran-12 pip openmpi-bin libopenmpi-dev git libxrender1 x11-apps python3-tk gnudatalanguage python3-gdl vim libgsl-dev
 RUN pip3 install numpy scipy matplotlib setuptools==68.2.2 eqtools==1.4.0 h5py plotly retrying astropy Cython dill pexpect tqdm vtk sphinx-fortran sphinxcontrib.images GitPython sphinx-rtd-theme pyvista f90nml scikit-learn pandas flatdict
 ARG UID
 ARG GID
 ARG USER
 ARG GROUP
-RUN groupadd -g $GID -o $GROUP
+RUN groupadd -g $GID -o $GROUP || true
 RUN useradd -m -u $UID -g $GID -o -s /bin/bash $USER
 USER $USER
 WORKDIR /app
