--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -23,6 +23,7 @@ GHOSTFOLD          = noghostfold
 GPU                = nogpu
 RUNTIME_COMPILATION = on
 TRANSPILATION       = off
+READ_OVERRIDES      = off
 GENERATE_DSL_CODE   = off
 GRID               =   grid
 GSL                = nogsl
@@ -3106,7 +3107,7 @@ FORCE_GPU_MAKE:
 #$(LIBGPU): $(GPU_DEPS)
 $(LIBGPU): $(CUDA_INCDIR)/PC_moduleflags.h $(CUDA_MAKEDIR)/Makefile.vendor FORCE_GPU_MAKE
 	@echo "Building Astaroth and interface libraries - see src/astaroth/ac_build.log!"
-	cd astaroth && make MPICOMM=$(MPICOMM) RUNTIME_COMPILATION=$(RUNTIME_COMPILATION) TRAINING=$(TRAINING) PRECISION=$(REAL_PRECISION) TRANSPILATION=$(TRANSPILATION) GENERATE_DSL_CODE=$(GENERATE_DSL_CODE) >& ac_build.log
+	cd astaroth && make MPICOMM=$(MPICOMM) RUNTIME_COMPILATION=$(RUNTIME_COMPILATION) TRAINING=$(TRAINING) PRECISION=$(REAL_PRECISION) READ_OVERRIDES=$(READ_OVERRIDES) TRANSPILATION=$(TRANSPILATION) GENERATE_DSL_CODE=$(GENERATE_DSL_CODE) >& ac_build.log
 #
 special_preps:
 ifeq ($(USE_SPECIAL_DISPATCHER),no)
