--- a/src/astaroth/Makefile
+++ b/src/astaroth/Makefile
@@ -87,6 +87,17 @@ TRANSPILATION            ?= off
 GENERATE_DSL_CODE        ?= off
 INLINING                 ?= off
 READ_OVERRIDES           ?= off
+
+
+FULL_DSL_OPTIMIZATIONS = off
+ifeq ($(TRANSPILATION),on)
+  FULL_DSL_OPTIMIZATIONS = on
+endif
+
+ifeq ($(READ_OVERRIDES),on)
+  FULL_DSL_OPTIMIZATIONS = on
+endif
+
 ELIMINATE_CONDITIONALS   ?= $(TRANSPILATION)
 CPU_BUILD                ?= off
 OPTIMIZE_INPUT_PARAMS    ?= on
@@ -128,8 +139,8 @@ astaroth_$(PREC).so: $(SOURCES) forcing.h $(AC_HEADERS) $(PC_HEADERS) $(CHEADERS
 
 CMAKE_OPTIONS = -DCPU_BUILD=$(CPU_BUILD) -DFFT_ENABLED=ON -DMULTIGPU_ENABLED=OFF -DMPI_ENABLED=$(CMAKE_MPI) -DBUILD_SHARED_LIBS=ON -DSINGLEPASS_INTEGRATION=$(CMAKE_SINGLEPASS) -DMAX_THREADS_PER_BLOCK=512 \
                 -DPACKED_DATA_TRANSFERS=$(CMAKE_PACKED) -DDOUBLE_PRECISION=$(CMAKE_PREC) -DBUILD_SAMPLES=OFF -DSUPPRESS_COMPILER_WARNINGS=$(SUPPRESS_COMPILER_WARNINGS) \
-		-DVERBOSE=off -DOPTIMIZE_INPUT_PARAMS=$(OPTIMIZE_INPUT_PARAMS) -DOPTIMIZE_MEM_ACCESSES=ON -DOPTIMIZE_ARRAYS=$(RUNTIME_COMPILATION) -DCMAKE_BUILD_TYPE=$(CMAKE_BUILD_TYPE) \
-	        -DBUILD_STANDALONE=OFF -DOPTIMIZE_FIELDS=$(TRANSPILATION) -DALLOW_DEAD_VARIABLES=$(RUNTIME_COMPILATION) -DBUILD_UTILS=OFF \
+		-DVERBOSE=off -DOPTIMIZE_INPUT_PARAMS=$(OPTIMIZE_INPUT_PARAMS) -DOPTIMIZE_MEM_ACCESSES=ON -DOPTIMIZE_ARRAYS=$(FULL_DSL_OPTIMIZATIONS) -DCMAKE_BUILD_TYPE=$(CMAKE_BUILD_TYPE) \
+	        -DBUILD_STANDALONE=OFF -DOPTIMIZE_FIELDS=$(TRANSPILATION) -DALLOW_DEAD_VARIABLES=$(FULL_DSL_OPTIMIZATIONS) -DBUILD_UTILS=OFF \
 		-DCMAKE_POSITION_INDEPENDENT_CODE=ON -DELIMINATE_CONDITIONALS=$(ELIMINATE_CONDITIONALS) -DDSL_MODULE_FILE=$(DSL_MODULE_FILE) -DINLINING=$(INLINING) -DBUILD_ACM=OFF -DPROFILING_ENABLED=OFF
 endif
 #
@@ -140,6 +151,9 @@ ifeq ($(TRANSPILATION),on)
 	@if ! cmp -s DSL/solve_two.ac DSL/local/solve_two.ac; then \
 		cp DSL/solve_two.ac DSL/local/; \
 	fi
+endif
+ifeq ($(READ_OVERRIDES),on)
+	cp submodule/build/runtime_build/overrides.h submodule/build
 endif
 	#TP: if PC_nghost.h is found to be missing we turn to the default of Astaroth i.e. STENCIL_ORDER = 6
 	@if [ ! -f DSL/local/PC_nghost.h ]; then \
