updated compilation files and pc_mkspecial routine to rename special appearances in special module during compilation

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -3130,7 +3130,7 @@ else
         endif
 endif
 special.so: $(CPARAM_OBJ) $(CDATA_OBJ) $(SPECIAL_OBJ) special_dummies.inc $(SPECIAL_MODULES:=.o)
-	$(LD) $(SPECIAL_MODULES:=.o) $(DLL_LDFLAGS) -o special.so
+	$(LD) $(SPECIAL_MODULES:=.o) $(DLL_LDFLAGS) -o special.so; pc_mkspecial.sh "$(SPECIAL_MODULES:=.f90)"
 #
 #  comment out the 3 lines ifneq, @, endif below if one gets an error message
 #  about io_dist cannot copy.
