helical_MHDTurb_HDF5: add pdf output and corresponding test
Added
lnrho_pdf=T
lspec_at_tplusdt=T

--- a/samples/helical-MHDturb_HDF5/run.in
+++ b/samples/helical-MHDturb_HDF5/run.in
@@ -13,6 +13,9 @@
  !comment_char='%'     !(useful when using matlab for visualization)
   lequatorz=T          !(to indicate that north/south diagnostics in in z)
   dt=4e-2
+
+  lspec_at_tplusdt=T
+  lnrho_pdf=T
 /
 &eos_run_pars
 /
