add geometrical types to basics

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -3313,7 +3313,7 @@ endif
 #
 #  Rules for combine_videofiles.x, read_videofiles.x, read_vectorfiles.x.
 #
-basics=cparam.o cdata.o $(FILE_IO_OBJ) general.o messages.o $(SYSCALLS_OBJ) syscalls_ansi.o nompicomm.o $(MORTON_HELPER_OBJ) $(PTHREAD_OBJ)
+basics=cparam.o cdata.o $(FILE_IO_OBJ) general.o messages.o $(SYSCALLS_OBJ) syscalls_ansi.o nompicomm.o $(MORTON_HELPER_OBJ) $(PTHREAD_OBJ) $(GEOMETRICAL_TYPES_OBJ)
 #
 combine_videofiles.o: $(basics)
 combine_videofiles.x: combine_videofiles.o
