MR: avoid warning about unloaded modules etc. at cleaning

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -275,7 +275,7 @@ ifeq ($(GSL),gsl_wrapper)
   ifneq ($(MODULE_CMD),)
     GSL_LOADED := $(shell (module list |& grep -i gsl) )
     ifeq ($(GSL_LOADED),)
-      ifeq ($(filter clean cleann cleanall distclean,$(target)),)
+      ifeq ($(findstring clean,$(target)),)
         $(info )
         $(warning No GSL module seems to be loaded!)
         $(info Try (one of) the following: $(shell (module spider |& grep -i gsl | sed -e's/^.* \([^ ]*[Gg][Ss][Ll][^ ]*\) .*$$/\1/') ))
@@ -445,7 +445,7 @@ ifeq ($(MPICOMM),$(filter $(MPICOMM), mpicomm))
   ifneq ($(and $(ncpus), $(nprocx), $(nprocy), $(nprocz)),)
     nprocs := $(shell echo $$(( $(nprocx) * $(nprocy) * $(nprocz))))
     ifneq ($(strip $(ncpus)),$(strip $(nprocs)))
-      ifeq ($(filter clean cleann cleanall distclean,$(target)),)
+      ifeq ($(findstring clean,$(target)),)
         $(info )
         $(error Cannot build: ncpus /= nprocx*nprocy*nprocz.)
       endif
@@ -455,7 +455,7 @@ else
   YINYANG = noyinyang
   ifneq ($(ncpus),)
     ifneq ($(ncpus),1)
-      ifeq ($(filter clean cleann cleanall distclean,$(target)),)
+      ifeq ($(findstring clean,$(target)),)
         $(info )
         $(error Cannot build: ncpus > 1, but MPICOMM = nompicomm.)
       endif
@@ -474,7 +474,7 @@ ifeq ($(SPECIAL),nospecial)
   SPECIAL_MODULES =
 else
   ifeq ($(SPECIAL),special)
-    ifeq ($(filter clean cleann cleanall distclean,$(target)),)
+    ifeq ($(findstring clean,$(target)),)
       $(info )
       $(error Cannot build: SPECIAL must not be set to special, but to individual module(s) in directory "special"! Exit.)
     endif
@@ -519,7 +519,7 @@ ifeq ($(TRAINING),training_torchfort)
   ifneq ($(MODULE_CMD),)
     CUDA_LOADED := $(shell (module list |& grep -i cuda) )
     ifeq ($(CUDA_LOADED),)
-      ifeq ($(filter clean cleann cleanall distclean,$(target)),)
+      ifeq ($(findstring clean,$(target)),)
         $(warning  No CUDA module seems to be loaded (needed for training)!)
         $(info Try (one of) the following: $(shell (module spider |& grep -i cuda | sed -e's/^.* \([^ ]*[Cc][Uu][Dd][Aa][^ ]*\) .*$$/\1/') ) )
         YESNO := $(shell bash -c 'read -p "Continue? (Y/N) " yesno; echo $$yesno')
@@ -549,7 +549,7 @@ ifneq ($(GPU),nogpu)
     CUDA_LOADED := $(shell (module list |& grep -i cuda) )
     ROCM_LOADED := $(shell (module list |& grep -i rocm) )
     ifeq ($(CUDA_LOADED)$(ROCM_LOADED),)
-      ifeq ($(filter clean cleann cleanall distclean,$(target)),)
+      ifeq ($(findstring clean,$(target)),)
         $(info )
         $(warning  No CUDA or ROCM module seems to be loaded!)
         $(info Try (one of) the following: $(shell (module spider |& grep -i cuda | sed -e's/^.* \([^ ]*[Cc][Uu][Dd][Aa][^ ]*\) .*$$/\1/') ) )
@@ -682,7 +682,7 @@ ifneq ($(filter $(SPECIAL) $(IO) $(IO_IN) $(IO_OUT) $(TRAINING), $(HDF5_MODULES)
   ifneq ($(MODULE_CMD),)
     HDF5_LOADED := $(shell (module list |& grep -i hdf5) || (module list |& grep -i hf5) )
     ifeq ($(HDF5_LOADED),)
-      ifeq ($(filter clean cleann cleanall distclean,$(target)),)
+      ifeq ($(findstring clean,$(target)),)
         $(info )
         $(warning No HDF5 module seems to be loaded!)
         $(info Try (one of) the following: $(shell (module spider |& grep -i hdf5 | sed -e's/^.* \([^ ]*[Hh][Dd][Ff]5[^ ]*\) .*$$/\1/') ) )
