Add info to one of my configs.

--- a/config/hosts/ccyang/pfe.nas.nasa.gov.conf
+++ b/config/hosts/ccyang/pfe.nas.nasa.gov.conf
@@ -1,7 +1,7 @@
 # pfe.nas.nasa.gov.conf:
 #     My settings for the NASA Advanced Supercomputing (NAS) systems.
 #
-# Chao-Chin Yang
+# Chao-Chin Yang @ The University of Alabama
 #
 # $Id$
 
