MR: less output; completions

--- a/src/Makefile.parent
+++ b/src/Makefile.parent
@@ -10,9 +10,9 @@ include src/Makefile.local
 
 # Legacy stuff for adapt-mkfile users:
 legacy_default: Makefile_inc Fortran_standard
-	touch src/.build-history
-	echo $(USER)"@"`hostname` "("`date`")" >> src/.build-history
-	( cd src && \
+	@touch src/.build-history
+	@echo $(USER)"@"`hostname` "("`date`")" >> src/.build-history
+	@( cd src && \
 	  $(MAKE) FROM_PARENT=src/ ADAPT_MKFILE=$(ADAPT_MKFILE) \
 	      -f Makefile.src Makefile && \
 	  $(MAKE) FROM_PARENT=src/ \
@@ -20,9 +20,9 @@ legacy_default: Makefile_inc Fortran_standard
 
 # Build the code:
 default_to_be: Makefile_inc Fortran_standard
-	touch src/.build-history
-	echo $(USER)"@"`hostname` "("`date`")" >> src/.build-history
-	( cd src && \
+	@touch src/.build-history
+	@echo $(USER)"@"`hostname` "("`date`")" >> src/.build-history
+	@( cd src && \
 	  echo "===== " $(MAKE) FROM_PARENT=src/ -f Makefile.src code "====="; \
 	  $(MAKE) FROM_PARENT=src/ -f Makefile.src default_to_be \
 	)
