Adding automatic generation of scientific references per year and topic and a How to on how to add citations and how it works. All in ReadTheDocs.

--- a/.gitignore
+++ b/.gitignore
@@ -473,6 +473,7 @@ src/astaroth/PC_*
 #
 # Readthedocs
 doc/readthedocs/_build
+doc/readthedocs/_images/papers_per_year.png 
 doc/readthedocs/code
 doc/readthedocs/pencil-docker/.env
 #
