--- a/samples/helical-MHDturb/src/Makefile.local
+++ b/samples/helical-MHDturb/src/Makefile.local
@@ -3,7 +3,7 @@
 ### Included by `Makefile'
 ###
 
-MPICOMM  = nompicomm
+MPICOMM  = mpicomm
 EOS      =   eos_idealgas
 HYDRO    =   hydro
 DENSITY  =   density
@@ -11,15 +11,15 @@ ENTROPY  = noentropy
 MAGNETIC =   magnetic
 GRAVITY  = nogravity
 FORCING  =   forcing
-PSCALAR  =   pscalar_nolog
 
 FOURIER  =   fourier_fftpack
 POWER    =   power_spectrum
-POISSON  =   poisson
-
-PARTICLES         =   particles_tracers
-PARTICLES_STALKER =   particles_stalker
 
 #SIGNAL_HANDLING   =   signal_handling
 
-REAL_PRECISION=double
+#REAL_PRECISION=double
+
+TRAINING =training_torchfort
+GPU =gpu_astaroth
+GPU_VENDOR = nvidia
+MULTITHREADING =	openmp
