--- a/samples/helical-MHDturb/run.in
+++ b/samples/helical-MHDturb/run.in
@@ -57,7 +57,7 @@
   lroute_via_cpu=F
   it_train=10, it_train_chkpt=1000
 	!it_train_start=1200
-  luse_trained_tau=F
+  luse_trained_tau=T
   max_loss=1.e-100
   model='stationary'
   config_file='config_afno.yaml'
