--- a/samples/conv-slab_cp_2/src/Makefile.local
+++ b/samples/conv-slab_cp_2/src/Makefile.local
@@ -4,16 +4,7 @@
 ###
 
 MPICOMM   =   mpicomm
-
-#================================
-# Please uncomment one IO option:
-#================================
-IO        =   io_collect
-#--------------------------------
-#IO        =   io_dist
-#--------------------------------
-#IO        =   io_hdf5
-#================================
+IO        =   io_dist
 
 FILE_IO   =   file_io_f95
 
