Python: tests: tox.ini: update dependencies

--- a/python/tests/tox.ini
+++ b/python/tests/tox.ini
@@ -17,6 +17,7 @@ deps =
     scipy
     pexpect
     pytest
+    decorator
 
 commands = pytest -x -m "not integration"
 
@@ -30,6 +31,7 @@ deps =
     pexpect
     pytest
     mpi4py
+    decorator
 
 [testenv:full]
 commands = pytest -x
