Python: tests: pytest.ini: pytest-xdist is not a mandatory dependency

--- a/python/tests/pytest.ini
+++ b/python/tests/pytest.ini
@@ -13,3 +13,4 @@ addopts = "--strict-markers"
 markers =
     integration: tests that depend on stuff outside the Python module. These require sourceme.sh to have been sourced in the current shell.
     pcautotest: tests that run pc_auto-test. These require sourceme.sh to have been sourced in the current shell. These are a subset of the integration tests.
+    xdist_group: used by the pytest-xdist plugin (defined here to allow tests to be performed without pytest-xdist installed)
