cdata.f90: two empty lines removed magnetic/meanfield.f90: the daa_dt_meanfield(f,df,p) routine is not called when ldisp_current=T. hydro.f90: added luij_schur=.false. magnetic.f90: added lbij_schur=.false. run.f90: added External SELECT function for DGEES Makefile.src idl/read/pc_varcontent.pro: added iguij1-iguij9 and ibij1-ibij9 utils/axel/global_start.in: added +&initial_condition_pars schur_triple_decomp.f90: added, still not working correctly though

--- a/.gitattributes
+++ b/.gitattributes
@@ -4949,6 +4949,7 @@ src/special/radial_dist_func.f90 -text
 src/special/reaction_0D.f90 -text
 src/special/rel_1d.f90 -text
 src/special/rtime_phiavg.f90 -text
+src/special/schur_triple_decomp.f90 -text
 src/special/set_gravity.f90 -text
 src/special/shallow_water.f90 -text
 src/special/shell.f90 -text
