--- a/samples/helical-MHDturb_HDF5/tests/.gitignore
+++ b/samples/helical-MHDturb_HDF5/tests/.gitignore
@@ -1,8 +1,1 @@
-read_aver.out*
-read_slices.out*
-read_xyaver.out*
-read_yaver.out*
-read_zaver.out*
-read_data.out*
-read_pdf.out*
-read_pvar.out*
+read_*.out*
