--- a/.gitignore
+++ b/.gitignore
@@ -521,3 +521,25 @@ doc/readthedocs/pencil-docker/.env
 !samples/2d-tests/dark-matter/.run_directories.log
 !samples/2d-tests/dark-matter/pc_build_tmp_*
 !samples/2d-tests/dark-matter/.pc_build_history
+!samples/0d-tests/schur_triple_decomp/src/.DS_Store
+!samples/0d-tests/schur_triple_decomp/src/*.directory
+!samples/0d-tests/schur_triple_decomp/src/*.pyc
+!samples/0d-tests/schur_triple_decomp/src/*~
+!samples/0d-tests/schur_triple_decomp/src/.*.swp
+!samples/0d-tests/schur_triple_decomp/src/host-ID
+!samples/0d-tests/schur_triple_decomp/src/revision.txt
+!samples/0d-tests/schur_triple_decomp/src/*-eps-converted-to.pdf
+!samples/0d-tests/schur_triple_decomp/src/.run_directories.log
+!samples/0d-tests/schur_triple_decomp/src/pc_build_tmp_*
+!samples/0d-tests/schur_triple_decomp/src/.pc_build_history
+!samples/0d-tests/schur_triple_decomp/.DS_Store
+!samples/0d-tests/schur_triple_decomp/*.directory
+!samples/0d-tests/schur_triple_decomp/*.pyc
+!samples/0d-tests/schur_triple_decomp/*~
+!samples/0d-tests/schur_triple_decomp/.*.swp
+!samples/0d-tests/schur_triple_decomp/host-ID
+!samples/0d-tests/schur_triple_decomp/revision.txt
+!samples/0d-tests/schur_triple_decomp/*-eps-converted-to.pdf
+!samples/0d-tests/schur_triple_decomp/.run_directories.log
+!samples/0d-tests/schur_triple_decomp/pc_build_tmp_*
+!samples/0d-tests/schur_triple_decomp/.pc_build_history
