src/special/schur_triple_decomp.f90, samples/0d-tests/schur_triple_decomp: : further completion src/run.f90, src/start.f90: removed logical function selct(WR, WI)

--- a/samples/0d-tests/schur_triple_decomp/print.in
+++ b/samples/0d-tests/schur_triple_decomp/print.in
@@ -2,7 +2,9 @@ it(i8)
 t(f10.3)
 dt(e10.2)
 urms(e10.3)
-umax(e10.3)
-brms(e10.3)
-epsK(e10.2)
-epsM(e10.2)
+uSH2(e10.3)
+uRR2(e10.3)
+uEL2(e10.3)
+bSH2(e10.3)
+bRR2(e10.3)
+bEL2(e10.3)
