--- a/samples/0d-tests/schur_triple_decomp/run.in
+++ b/samples/0d-tests/schur_triple_decomp/run.in
@@ -10,8 +10,8 @@
 &hydro_run_pars
   lforcing_cont_uu=T
   lreinitialize_uu=T, inituu='gaussian-noise', ampluu=.1
-  !uij_0D_test=1.,0.,1., 0.,-1.,-1., 0.,1.,0.
   uij_0D_test=1.,-.1,1., -.3,+1.,-1., -.5,1.,-.5
+  uij_0D_test=1.,0.,1., 0.,-1.,-1., 0.,1.,0.
 /
 &density_run_pars
 /
@@ -19,10 +19,11 @@
   !bij_0D_test=0.,0.,0., 0.,0.,1., 0.,-1.,0.
   bij_0D_test=1.,0.,1., 0.,-1.,-1., 0.,1.,0.
   bij_0D_test=1.,-.1,1., -.3,+1.,-1., -.5,1.,-.5
+  bij_0D_test=1.,0.,0., 0.,-1.,-.5, 0.,1.,0.
   eta=1e-3
 /
 &special_run_pars
-  luij_schur=F, lbij_schur=F
+  luij_schur=T, lbij_schur=T
 /
 &viscosity_run_pars
   nu=1e-1
